# inkpages

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
docs/: pipeline.md  schema.md  source-scouting.md  vgen-categories.md
migrations/: 0001_core.sql  0002_artists.sql  0003_ops.sql  0004_seed_platforms.sql  0005_content_flags_review.sql  0006_relations_activity.sql  0007_more_platforms.sql  0008_profile_hosts.sql  0009_commissions_contacts.sql  0010_review_kinds_links.sql  0011_drop_display_only_tag.sql  0012_link_checks.sql  0013_skeb_platforms_stats.sql  0014_display_language_avatar.sql  0015_sources.sql  0016_hidden_account_status.sql  0017_directory_hidden_aware.sql  0018_misskey_platform.sql  0019_accounts_display_name.sql  0020_weibo_facebook.sql  0021_comms_split.sql  0022_hardening.sql  0023_resolved_links.sql  0024_directory_name_hydrated.sql  0025_hub_platforms.sql  0026_name_by_followers_avatars.sql  0027_edge_dismissed.sql  0028_artstation_source.sql  0029_project_accounts.sql  0030_deviantart_source.sql  0031_vgen_source.sql  0032_tiktok.sql  0033_manual_tag_source.sql  0034_junk_handle_cleanup.sql  0035_asset_links_and_mention_dumps.sql  0036_twitter_protected_backfill.sql  0037_threads_bilibili.sql  0038_more_languages.sql  0039_lower_handle_index.sql
scripts/: migrate.py  smoke.sql
src/inkpages/: bluesky.py  check_links.py  classify_region.py  cluster.py  crawl_links.py  db.py  discover_artstation.py  extract.py  (+15 more)
xtag/: README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
(+16 files in other folders)
