[project]
name = "inkpages"
version = "0.1.0"
description = "No-AI artist directory: identity-resolution schema and pipeline"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inkpages"]
